--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,44 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
+    <!-- Favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#5b4a3e" />
+
+    <!-- Primary Meta Tags -->
+    <title>PICTURA Booth</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="PICTURA Booth — a premium photobooth experience. Join the waitlist for early access, launch updates, and exclusive previews."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Apple / PWA -->
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Optional: Social sharing (safe to include) -->
+    <meta property="og:title" content="PICTURA Booth" />
+    <meta
+      property="og:description"
+      content="A premium photobooth experience. Join the waitlist for early access, launch updates, and exclusive previews."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="PICTURA Booth" />
+    <meta
+      name="twitter:description"
+      content="A premium photobooth experience. Join the waitlist for early access, launch updates, and exclusive previews."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo.jpg" />
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
