update title page

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     <meta name="theme-color" content="#5b4a3e" />
 
     <!-- Primary Meta Tags -->
-    <title>PICTURA Booth</title>
+    <title>PICTURA Booth | Premium Photobooth Experience</title>
+
     <meta
       name="description"
       content="PICTURA Booth — a premium photobooth experience. Join the waitlist for early access, launch updates, and exclusive previews."
